# MachineLearning

./: .gitignore
PalPlant/: custom_pipeline.py  main.ipynb
PalPlant/utils/: dataset.py
assignment1/: README.md  pyproject.toml
assignment1/data/: cleaned.csv
assignment1/results/: myKNN.txt  pipeline.txt
assignment1/train/: KNN.py  pipeline.py
assignment1/utils/: clean_util.py
assignment2/: dataset_generator.py  decision_tree.py  generate_report.py  kmeans.py  naive_bayes.py  pyproject.toml  run.sh
assignment3/: adaboost.py  bagging.py  dataset_generator.py  decision_tree.py  generate_report.py  main.py  pyproject.toml  q1_bagging.py  q2_random_forest.py  q3_adaboost.py  random_forest.py  run.sh
assignment3/datasets/: bagging_fails_X.csv  bagging_fails_y.csv  bagging_helps_y.csv  boosting_noise_X.csv  boosting_noise_y.csv  feature_dominant_X.csv  feature_dominant_y.csv  high_dimensional_X.csv  high_dimensional_y.csv  high_noise_X.csv  high_noise_y.csv  low_noise_X.csv  low_noise_y.csv
